@@ -9,7 +9,20 @@ public class Game2048 extends Game {
 
 
 
-
+    private void createNewNumber(){
+        int x = getRandomNumber(SIDE);
+        int y = getRandomNumber(SIDE);
+        int number = getRandomNumber(10);
+        if (gameField[x][y] == 0) {
+            if (number < 9) {
+                gameField[x][y] = 2;
+            } else {
+                gameField[x][y] = 4;
+            }
+        } else {
+            createNewNumber();
+        }
+    }
     private void drawScene() {
         for (int i = 0; i < gameField.length; i++) {
             for (int j = 0; j < gameField[i].length; j++) {
@@ -18,7 +31,10 @@ public class Game2048 extends Game {
         }
     }
 
-    private void createGame() {}
+    private void createGame() {
+        createNewNumber();
+        createNewNumber();
+    }
 
     @Override
     public void initialize() {
@@ -27,3 +43,5 @@ public class Game2048 extends Game {
         drawScene();
     }
 }
+
+//--module-path "C:\MyProjects\JavaRushTasks\lib\javafx-sdk-17.0.2\lib" --add-modules javafx.controls,javafx.fxml
